// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sheet should render all props with nodes 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="backdrop backdropAnimationIn zoomOut"
      />
      <div
        aria-label="Sheet"
        class="wrapper hideOutline wrapperAnimationIn"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="shadowContainer"
          >
            <div
              class="Flex rowGap0 flexGrow itemsCenter justifyBetween xsDirectionRow"
            >
              <div
                class="box flexGrow paddingX4 paddingY6"
              >
                <div
                  class="box xsDisplayFlex"
                >
                  <h1
                    class="Heading fontSize2 darkGray alignLeft breakWord"
                  >
                    Sheet title
                  </h1>
                </div>
              </div>
              <div
                class="box flexNone paddingX4 paddingY6"
              >
                <button
                  aria-label="Dismiss"
                  class="button tapTransition enabled"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="pog white"
                    style="height: 40px; width: 40px;"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label=""
                      class="icon darkGray iconBlock"
                      height="18"
                      role="img"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="test-file-stub"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="box flexGrow marginBottom4 paddingX4"
            >
              <nav />
            </div>
          </div>
          <div
            class="box flexGrow marginTop4 overflowAuto paddingX4"
          >
            <section />
          </div>
          <div
            class="shadowContainer"
          >
            <div
              class="box paddingX4 paddingY4"
            >
              <footer />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sheet should render all props with render props 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="backdrop backdropAnimationIn zoomOut"
      />
      <div
        aria-label="Sheet"
        class="wrapper hideOutline wrapperAnimationIn"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="shadowContainer"
          >
            <div
              class="Flex rowGap0 flexGrow itemsCenter justifyBetween xsDirectionRow"
            >
              <div
                class="box flexGrow paddingX4 paddingY6"
              >
                <div
                  class="box xsDisplayFlex"
                >
                  <h1
                    class="Heading fontSize2 darkGray alignLeft breakWord"
                  >
                    Sheet title
                  </h1>
                </div>
              </div>
              <div
                class="box flexNone paddingX4 paddingY6"
              >
                <button
                  aria-label="Dismiss"
                  class="button tapTransition enabled"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="pog white"
                    style="height: 40px; width: 40px;"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label=""
                      class="icon darkGray iconBlock"
                      height="18"
                      role="img"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="test-file-stub"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="box flexGrow marginBottom4 paddingX4"
            >
              <button
                type="submit"
              />
            </div>
          </div>
          <div
            class="box flexGrow marginTop4 overflowAuto paddingX4"
          >
            <button
              type="submit"
            />
          </div>
          <div
            class="shadowContainer"
          >
            <div
              class="box paddingX4 paddingY4"
            >
              <button
                type="submit"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sheet should render animation in 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="backdrop backdropAnimationIn zoomOut"
      />
      <div
        aria-label="Sheet"
        class="wrapper hideOutline wrapperAnimationIn"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="box flexGrow justifyEnd marginBottom8 xsDisplayFlex"
          >
            <div
              class="absolute box flexNone paddingX6 paddingY7"
            >
              <button
                aria-label="Dismiss"
                class="button tapTransition enabled"
                tabindex="0"
                type="button"
              >
                <div
                  class="pog white"
                  style="height: 40px; width: 40px;"
                >
                  <svg
                    aria-hidden="true"
                    aria-label=""
                    class="icon darkGray iconBlock"
                    height="18"
                    role="img"
                    viewBox="0 0 24 24"
                    width="18"
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
          <div
            class="box flexGrow marginTop4 overflowAuto paddingX4"
          >
            <section />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sheet should render animation out 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="backdrop backdropAnimationOut zoomOut"
      />
      <div
        aria-label="Sheet"
        class="wrapper hideOutline wrapperAnimationOut"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="box flexGrow justifyEnd marginBottom8 xsDisplayFlex"
          >
            <div
              class="absolute box flexNone paddingX6 paddingY7"
            >
              <button
                aria-label="Dismiss"
                class="button tapTransition enabled"
                tabindex="0"
                type="button"
              >
                <div
                  class="pog white"
                  style="height: 40px; width: 40px;"
                >
                  <svg
                    aria-hidden="true"
                    aria-label=""
                    class="icon darkGray iconBlock"
                    height="18"
                    role="img"
                    viewBox="0 0 24 24"
                    width="18"
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
          <div
            class="box flexGrow marginTop4 overflowAuto paddingX4"
          >
            <section />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
